--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
   <h1 align="center";>Waratchawut Wongpattanakit</h1>
-  <p align="center";> 129 Bangbon3 soi14 road , Laksong ,Bangkae , Bangkok , 10160 </p>
+  <p align="center";> 129 Bangbon3 soi14 road, Laksong, Bangkae, Bangkok, 10160 </p>
   <p align="center";> Mobile : +66 633242889   E-mail: waratchw@gmail.com </p>
   <hr />
 
   <h2>Summary</h2>
-  <p>Seeking a challenging job related to Technology, Automation, IT, product development. Proficient in risk analysis and evaluation. I would like to bring out the automation process and tools to apply with tasks. Aiming for process improve plan to reduce the time consumption errors. I believe that with my capabilities, I can create best efficiency and practice to the team and all workflows.</p>
+  <p>Seeking a challenging job related to technology, automation, IT and product development. Proficient in risk analysis and evaluation.Willing to bring out the automation process and tools to apply with tasks. Aiming for process improve plan to reduce the time consumption errors. I believe that with my capabilities, I can create best efficiency and practice to the team and all workflows.</p>
   <hr />
 
   <h2>Work Experience</h2>
