--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <hr />
 
   <h2>Summary</h2>
-  <p>Seeking a challenging job related to technology, automation, IT and product development. Proficient in risk analysis and evaluation.Willing to bring out the automation process and tools to apply with tasks. Aiming for process improve plan to reduce the time consumption errors. I believe that with my capabilities, I can create best efficiency and practice to the team and all workflows.</p>
+  <p>Seeking a challenging job related to technology, automation, IT and product development. Proficient in risk analysis and evaluation.Willing to bring out the automation process and tools to apply to relavant tasks. Aiming for process improvement plan to matigate time-consuming errors. I believe that with my capabilities, I can create efficiency and best practice to the team and all workflows.</p>
   <hr />
 
   <h2>Work Experience</h2>
@@ -22,9 +22,9 @@
       <h3>Advance Wireless Network - International Roaming Engineer</h3>
       <p>July 2017 - Present</p>
       <ul>
-        <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 Millions in a years</li>
-        <li>Implemented RPA project to accelerate to 70 % automation task; reduced man hour to 30% per month</li>
-        <li>Implemented stat monitoring dashboard to reduce the time for monitoring process from 30 mins to 2 mins </li>
+        <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 million annaully</li>
+        <li>Implemented RPA project to reduce 70 % man-hour per month</li>
+        <li>Implemented stat monitoring dashboard to minimize the time for monitoring process from 30 mins to 2 mins </li>
       </ul>
     
     
@@ -33,7 +33,7 @@
 
   <h2>Education</h2>
   <ul>
-    <h3>King Mongkut's University of Technology Thonburi - Bangkok , Thailand.</h3>
+    <h3>King Mongkut's University of Technology Thonburi - Bangkok, Thailand</h3>
       <p> 2013 - 2017</p>
       <ul>
         <li>Bachelor of Engineering Program in Electrical Communication and Electronic Engineering </li>
@@ -55,9 +55,10 @@
   
   
   <h2>Miscellaneous</h2>
-  <ul>
-    <li>Language : Thai(Native), English(Fluent)</li>
-    <li>Computer Skills : Tableau, PowerBI, PowerApps, PowerAutomate, SQL , C ++ , HTML , PHP, Python, RPA, Informatica, UNIX  </li>
+  <ul>I
+    <li>Language : Thai (Native), English (Fluent)</li>
+    <li>Computer Skills : Tableau, PowerBI, PowerApps, PowerAutomate, SQL, C ++, HTML, PHP, Python, RPA, Informatica, UNIX, VBA  </li>
+    <li>Professional skills : collaboration, communication, leadership, agility, analytical thinking, adaptability, problem-solving, active learning, time management, negotiation </li> 
     <li>Interests : Guitar, Badminton, Snorkeling, Board games </li>
   </ul>
   <hr />
