--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>July 2017 - Present</p>
       <ul>
         <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 million annaully</li>
-        <li>Implemented RPA project to reduce 70 % man-hour per month</li>
+        <li>Implemented RPA project to reduce 70 % of man-hour</li>
         <li>Implemented stat monitoring dashboard to minimize the time for monitoring process from 30 mins to 2 mins </li>
       </ul>
     
