--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Resume</title>
+  <title>Resume : Waratchawut Wongpattanakit</title>
 </head>
 
 <body>
