--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
   <h1 align="center";>Waratchawut Wongpattanakit</h1>
-  <p align="center";> 129 Bangbon3 soi14 road, Laksong, Bangkae, Bangkok, 10160 </p>
+  <p align="center";> 129 Bangbon 3 soi 14 road, Laksong, Bangkae, Bangkok, 10160 </p>
   <p align="center";> Mobile : +66 633242889   E-mail: waratchw@gmail.com </p>
   <hr />
 
   <h2>Summary</h2>
-  <p>Seeking a challenging job related to technology, automation, IT and product development. Proficient in risk analysis and evaluation. Willing to bring out the automation process and tools to apply to relavant tasks. Aiming for process improvement plan to matigate time-consuming errors. I believe that with my capabilities, I can create efficiency and best practice to the team and all workflows.</p>
+  <p>Seeking a challenging job related to technology, automation, IT and product development. Proficient in risk analysis and evaluation. Willing to bring out the automation process and tools to apply to relavant tasks. Aiming for process improvement plan to mitigate time-consuming errors. I believe that with my capabilities, I can create efficiency and best practice to the team and all workflows.</p>
   <hr />
 
   <h2>Work Experience</h2>
@@ -22,8 +22,8 @@
       <h3>Advance Wireless Network - International Roaming Engineer</h3>
       <p>July 2017 - Present</p>
       <ul>
-        <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 million annaully</li>
-        <li>Implemented RPA project to reduce 70 % of man-hour</li>
+        <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 million THB (853,765.20 USD) annually</li>
+        <li>Implemented RPA project to handle customer complaint; pre-analysis and decide whether to answer or forward to relevant teams to reduce 70 % of man-hours</li>
         <li>Implemented stat monitoring dashboard to minimize the time for monitoring process from 30 mins to 2 mins </li>
       </ul>
     
