--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h2>Miscellaneous</h2>
   <ul>
     <li>Language : Thai (Native), English (Fluent)</li>
-    <li>Computer Skills : Tableau, PowerBI, PowerApps, PowerAutomate, SQL, C ++, HTML, PHP, Python, RPA, Informatica, UNIX, VBA  </li>
+    <li>Computer Skills : Tableau, PowerBI, PowerApps, PowerAutomate, SQL, C ++, HTML, PHP, Python, RPA, Informatica (ETL), UNIX, VBA  </li>
     <li>Professional skills : collaboration, communication, leadership, agility, analytical thinking, adaptability, problem-solving, active learning, time management, negotiation </li> 
     
   </ul>
