--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>July 2017 - Present</p>
       <ul>
         <li>Developed customer experience and engagement strategy to cope with challenging outroamer network quality; the strategy is expected to increase revenue by 30 million THB (853,765.20 USD) annually</li>
-        <li>Implemented RPA project to handle customer complaint; pre-analysis and decide whether to answer or forward to relevant teams to reduce 70 % of man-hours</li>
+        <li>Implemented RPA project to handle customer complaint through the automated pre-analysis and case management, which reduced 70 % of man-hours</li>
         <li>Implemented stat monitoring dashboard to minimize the time for monitoring process from 30 mins to 2 mins </li>
       </ul>
     
